--- a/style.css
+++ b/style.css
@@ -6,11 +6,14 @@ html {
 }
 body {
 	margin: 0;
+	min-width: 400px;
 }
 .header {
-	position: relative;
+	position: fixed;
+	z-index: 1;
 	background: #273852;
 	height: 15vh;
+	width: 100vw;
 }
 .header__heading {
 	color: white;
@@ -42,6 +45,10 @@ body {
 	position: absolute;
 	top: 29%;
 	left: 20%;
+}
+.full {
+	position: relative;
+	top:6rem;
 }
 .content {
 	width: 70vw;
@@ -177,12 +184,15 @@ label {
 	border: 0;
 }
 .footer {
+	position: fixed;
 	background: #273852;
 	height: 7vh;
+	width: 100%;
+	bottom: 0;
 }
 .footer__copyright {
 	color: white;
 	text-align: center;
 	position: relative;
-	top: 28%;
+	top: 10%;
 }
